Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

18-Mar-2012 Jean-Marie Simonet
 # [#28226] Incorrect SQL statement for MenuItems in menuitem library. Thanks Ben.
 # [#28261] Error message contains the string Joomla 1.7. Thanks Nikolai

17-Mar-2012 Jean-Marie Simonet
 $ Updatng installation ini files be-BY, da-DK, el-GR, es-ES, it-IT, ja-JP, km-KH, lo-LA, lv-LV, mk-MK, nb-NO, nn-NO, pl-PL, sr-RS, sr-YU, ta-IN

16-Mar-2012 Jean-Marie Simonet
 $ Updating fr-FR installation ini

15-Mar-2012 Mark Dexter
 # [#27759] Alternative Sample Data Files (blog and brochure)
 # [#28237] PHP Notice in back end login when cache enabled.

09-Mar-2012 Christophe Demko
 # [#27052] *content menu displayed when disable component content
 # [#27959] *Wrong redirection when login on multilang site with SEF on. (Jean-Marie Simonet)
 # [#27659] joomla 2.5beta1 module alternative layout on admin side don't work

07-Mar-2012 Christophe Demko
 # [#27951] Missing parameter handling in magic proxy methods for name quotes (Sven Hurt)
 # [#28151] *Joomla! 2.5 - Multilanguage feature - external links end with 404
 # [#28206] Result Description "if condition" was missing in com_finder (Skunk Sie)

05-Mar-2012 Jean-Marie Simonet
 # [#28198] Beez 5 generating warings/notices. Thanks Elin
 # [#28199] Archive module error when no articles are archived. Thanks Elin
 # [#27889] change permissions in language manager changes default language to english. Thanks Christophe

04-Mar-2012 Jean-Marie Simonet
 # [#28190] com_search: Show Search Results results in PHP fatal error. Thanks John
 #$ [#27751] Installation - Check to ensure the schema file exists. Thanks Michael and Mark
 # [#27780] Duplicate Template Styles. Thanks Reinhard

04-Mar-2012 Christophe Demko
 # [#27770] loadposition strips the $ character from html modules