@@ -38,6 +38,7 @@ INSTL_DATABASE_HOST_DESC="Normalmente é &quot;localhost&quot;"
 INSTL_DATABASE_HOST_LABEL="Nome do servidor"
 INSTL_DATABASE_NAME_DESC="Alguns alojamentos permitem apenas um determinado nome DB por site. Use um prefixo da tabela para diferentes sítios."
 INSTL_DATABASE_NAME_LABEL="Nome da base de dados"
+INSTL_DATABASE_NO_SCHEMA="Não existe um esquema de base de dados para este tipo de base."
 INSTL_DATABASE_OLD_PROCESS_DESC="Todas as tabelas existentes de anteriores instalações de backup do Joomla! Serão substituídas."
 INSTL_DATABASE_OLD_PROCESS_LABEL="Procedimento caso exita uma base de dados"
 INSTL_DATABASE_PASSWORD_DESC="Para segurança do sítio é obrigatório o uso de senha na conta do mysql"
@@ -80,7 +81,7 @@ INSTL_SITE_NAME_TITLE="Nome do sítio"
 INSTL_SITE_META_ADVANCED_SETTINGS="Configurações avançadas - Opcional"
 INSTL_SITE_NAME_DESC="Digite o nome do seu site Joomla! <br />Opcional:<br /> Também pode inserir uma descrição e meta-termos para o seu sítio.<br /> Também pode decidir se a entrada do sítio ficará logo disponível ao público após a instalação"
 INSTL_SITE_METADESC_LABEL="Meta descrição"
-INSTL_SITE_METADESC_TITLE_LABEL="Digite uma descrição geral do sítio que será utilizada pelos motores de busca. Normalmente 20 palavras é o valor ideal."
+INSTL_SITE_METADESC_TITLE_LABEL="Digite uma descrição geral do sítio que será utilizada pelos motores de pesquisa. Normalmente 20 palavras é o valor ideal."
 INSTL_SITE_METAKEYS_LABEL="Meta-termos"
 INSTL_SITE_METAKEYS_TITLE_LABEL="Indique termos-chave ou expressões que melhor caracterizam o seu sítio. Separe os termos-chave com vírgulas. Se utilizar expressões terá de as colocar entre aspas simples."
 INSTL_SITE_CONF_TITLE="Confirme o E-Mail e a Senha do Administrador."
@@ -98,7 +99,11 @@ INSTL_SITE_INSTALL_SAMPLE_LABEL="INSTALAR DADOS PADRÃO"
 INSTL_SITE_INSTALL_SAMPLE_DESC="É altamente recomendada esta instalação. Instalará o conteúdo de exemplo padrão que é incluído no pacote da instalação Joomla!. Deve escolher os dados em Português para que o sítio fique totalmente me português. Podeteriormente pode eliminar as partes não desejadas e alterar os restantes valores"
 INSTL_SITE_SAMPLE_LOADED="SUCESSO: dados instalados. Carregue em SEGUINTE"
 INSTL_SAMPLE_DATA_SET="Dados em Inglês (GB)"
+INSTL_SAMPLE_BLOG_SET="Dados em Inglês (GB) para blogue"
+INSTL_SAMPLE_BROCHURE_SET="Dados em Inglês (GB) para brochura"
 INSTL_SAMPLE_DATA_PT_SET="Dados em Português (pt-PT)"
+INSTL_SAMPLE_BLOG_PT_SET="Dados em Português (pt-PT) para blogue"
+INSTL_SAMPLE_BROCHURE_PT_SET="Dados em Português (pt-PT) para brochura"
 ;// XX has to be the text entered before .sql in sample_data_xx.sql
 
 ;Complete view
@@ -146,7 +151,7 @@ INSTL_PAGE_TITLE="Instalador web para Joomla!"
 
 ;Configuration model
 INSTL_ERROR_CONNECT_DB="Não foi possível ligar à base de dados. A ligação devolveu o número: %s"
-INSTL_STD_OFFLINE_MSG="Este site está em manutenção.<br /> Volte brevemente."
+INSTL_STD_OFFLINE_MSG="Este sítio está em manutenção.<br /> Volte brevemente."
 
 ;Filesystem model
 INSTL_FTP_INVALIDROOT="O diretório de FTP especificado não é o diretório desta instalação Joomla!"
